--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.2.5",
     "handlebars": "^4.7.7",
+    "infinite-scroll": "^4.0.1",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
     "simplelightbox": "^2.12.1"
